Added React-Todo-App submodule inside repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "React-Store-App"]
 	path = React-Store-App
 	url = https://github.com/gauravk268/React-Store-App
+[submodule "React-Todo-App"]
+	path = React-Todo-App
+	url = https://github.com/gauravk268/React-Todo-App
